first round of revisions

--- a/aksbib.bib
+++ b/aksbib.bib
@@ -175,6 +175,14 @@
   school = {Rutgers University}
 }
 
+@book{Blevins2004,
+  author={Juliette Blevins},
+  title={Evolutionary phonology: the emergence of sound patterns},
+  year={2004},
+  publisher={Cambrigde University Press},
+  address = {New York}
+}
+
 @article{Blust2012,
   author = {Robert Blust},
   title = {Hawu Vowel Metathesis},
@@ -876,6 +884,20 @@ isbn="978-3-662-53042-9",
   year =         {2013},
   editor =       {Andras Kornai and Marco Kuhlmann},
   address =      {Sofia, Bulgaria},
+}
+
+@InProceedings{Heinz-Koirala-2010-MLEFD,
+  author        =  {Jeffrey Heinz and Cesar Koirala},
+  title         = {Maximum Likelihood Estimation of Feature-Based
+                  Distributions},
+  booktitle     = {Proceedings of the 11th Meeting of the ACL Special
+                  Interest Group on Computational Morphology and Phonology},
+  month         = {July},
+  year          = {2010},
+  address       = {Uppsala, Sweden},
+  publisher     = {Association for Computational Linguistics},
+  pages         = {28--37},
+  pub-url       = {http://www.aclweb.org/anthology/W10-2204},             
 }
 
 @inproceedings{HeinzRawal11,
@@ -1723,6 +1745,17 @@ publisher = {Plenum Publishing Co.},
  address = {Oxford},
 }
 
+
+@article{RoarkEtAl2019,
+title	= {Neural Models of Text Normalization for Speech Applications},
+author	= {Brian Roark and Felix Stahlberg and Hao Zhang and Ke Wu and Kyle Gorman and Richard Sproat and Xiaochang Peng},
+year	= {2019},
+journal	= {Computational Linguistics},
+volume	= {45(2)}
+}
+
+
+
 @incollection{RocheSchabes1997,
   author = {Emmanuel Roche and Yves Schabes},
   title = {Introduction},
@@ -1823,6 +1856,18 @@ publisher = {Plenum Publishing Co.},
   school = {University of Iowa}
 }
 
+@inproceedings{Shibata-Heinz-2019-MLEFRDSL,
+    title = "Maximum Likelihood Estimation of Factored Regular Deterministic Stochastic Languages",
+    author = "Chihiro Shibata and Jeffrey Heinz",
+    booktitle = "Proceedings of the 16th Meeting on the Mathematics of Language",
+    month = "18{--}19 " # jul,
+    year = "2019",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    pub-url = "https://www.aclweb.org/anthology/W19-5709",
+    pages = "102--113",
+}
+
 @article{Schuetzenberger1961,
 author = {Sch\"utzenberger, Marcel-Paul},
 title = {A Remark On Finite Transducers},
@@ -1916,6 +1961,19 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
   year       = {2011},
   pages      = {617-643},
   chapter    = {}
+}
+
+@InProceedings{Strother-Garcia-HeinzEtAl-2016-UMTGICSP,
+  author =       {Kristina Strother-Garcia and Jeffrey Heinz and Hyun Jin Hwangbo},
+  title =        {Using model theory for grammatical inference: a case study from phonology},
+  booktitle = {Proceedings of The 13th International Conference on Grammatical Inference},
+  month = {October},
+  year =         {2016},
+  editor =       {Sicco Verwer and Menno van Zaanen and Rick Smetsers},
+  volume =       {57},
+  pages =        {66--78},
+  series = {JMLR: Workshop and Conference Proceedings},
+  pub-url       = {http://www.jmlr.org/proceedings/papers/v57/strother-garcia16.pdf}
 }
 
 
@@ -2059,6 +2117,21 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
     pages = {267--276},
     doi = {10.7275/sywz-xw23}
 }
+
+
+@Article{VuZehfrooshEtal2018-SRLUSM,
+  author =       {Mai Ha Vu and Ashkan Zehfroosh and Kristina Strother-Garcia and Michael Sebok and Jeffrey Heinz and Herbert G. Tanner},
+  title =        {Statistical Relational Learning with Unconventional String Models},
+  journal =      {Frontiers in Robotics and AI},
+  year =         {2018},
+  volume =       {5},
+  number =       {76},
+  pages =        {1--26},
+  month =        {July},
+  pub-url = {https://doi.org/10.3389/frobt.2018.00076}
+}
+
+
 @inproceedings{Walker2000,
     author = {Rachel Walker},
     title = {Yaka nasal harmony: Spreading or segmental correspondence?},
@@ -2074,6 +2147,18 @@ url={http://dx.doi.org/10.1007/3-540-07407-4_23}
   year = {2013},
   note = {Handout. MFM 21, University of Manchester.}
 }
+
+@article{WellmanHenrion1993,
+author = {Wellman, Michael and Henrion, Max},
+year = {1993},
+month = {04},
+pages = {287-292},
+title = {Explaining `explaining away'},
+volume = {15},
+journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+doi = {10.1109/34.204911}
+}
+
 
 @book{Wiebke1995,
   title={Final Devoicing in the Phonology of German},
